/* Stiilijuhis
- sõnumi-, teenuse ja rpc meetodinimed - Camelcase
- rpc nimedes on oluline mitte kasutada suurtähti, peale esimese
- väljanimed sõnumites - väiketähed, sõnade eraldajaks allkriips
*/
syntax = "proto3";

package pas;

// Teenuse määratlus
service PASService {
  rpc List (Empty) returns (UserList) {}
  rpc Insert (User) returns (OpResultMessage) {}
  rpc Get (PersonCode) returns (GetUserResult) {}
  rpc Delete (PersonCode) returns (OpResultMessage) {}
  rpc Assignrole (RoleAssignment)
   returns (OpResultMessage) {}
  rpc Watch (Empty) returns (stream User) {}
}

// Sõnumitüüpide määratlused
message Empty {
}

message OpResultMessage {
  string op_result = 1;
}

message GetUserResult {
  string op_result = 1;
  User user_found = 2;  
}

message RoleAssignment {
  string personcode = 1;
  string role = 2;
  string event = 3;
  string start_date = 4;
  string end_date = 5;
  string status = 6;
}

message User {
  string personcode = 1;
  string first_name = 2;
  string last_name = 3;
  repeated RoleAssignment roles = 4;
}

message UserList {
  repeated User users = 1;
}

message PersonCode {
  string personcode = 1;
}
